concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_map.rs
use concord_macros::api;

pub struct Mapped;

api! {
    client ReservedNoContentMapApi {
        base "https://example.com"
    }

    GET Ping
        path ["ping"]
        -> NoContent
        map Mapped {
            ()
        }
}

fn main() {}
