concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_map.stderr
error: `map` is only supported for buffered responses
  --> tests/trybuild/fail/codegen/reserved_nocontent_map.rs:10:9
   |
10 |     GET Ping
   |         ^^^^
